Corrected spacing/layout

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -3,10 +3,10 @@
 .container {
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 1248px;
   margin: 0 auto;
   gap: 96px;
-  height: 200vh;
+  height: 1500px;
 
   .cardText {
     position: sticky;
