--- a/src/components/Projects/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 24px;
   align-items: center;
+  padding-bottom: 192px;
 
   @media (min-width: 1024px) {
     flex-direction: row;
@@ -18,15 +19,16 @@
   }
 
   .content {
-    max-width: 500px;
+    flex: 1;
+    max-width: 33.333%;
     display: flex;
     flex-direction: column;
     gap: 24px;
 
     .title {
-      font-size: 2.5rem;
+      font-size: 48px;
       font-weight: 700;
-      color: #ffffff;
+      color: $offWhite;
       margin: 0;
     }
 
@@ -36,7 +38,7 @@
       gap: 0.5rem;
       font-size: 0.875rem;
       text-transform: uppercase;
-      color: #aaaaaa;
+      color: $offWhite;
 
       .separator {
         margin: 0 0.25rem;
@@ -44,64 +46,30 @@
     }
 
     .description {
-      color: #cccccc;
-      line-height: 1.6;
-      font-size: 1.125rem;
+      color: $offWhite;
+      line-height: 24px;
+      font-size: 16px;
     }
 
     .buttons {
       display: flex;
       gap: 1rem;
       margin-top: 1rem;
-
-      .btn {
-        display: inline-flex;
-        align-items: center;
-        gap: 0.5rem;
-        padding: 0.75rem 1.5rem;
-        border-radius: 9999px;
-        color: #ffffff;
-        text-decoration: none;
-        font-size: 1rem;
-        position: relative;
-        background: none;
-
-        &:after {
-          content: "";
-          position: absolute;
-          inset: 0;
-          padding: 1px;
-          border-radius: 9999px;
-          background: linear-gradient(90deg, #ff5c01, #ce67f3);
-          mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-          mask-composite: xor;
-          -webkit-mask-composite: xor;
-          pointer-events: none;
-        }
-
-        &::before {
-          content: "↗";
-          margin-left: 0.25rem;
-          font-size: 1rem;
-        }
-
-        &:hover {
-          opacity: 0.9;
-        }
-      }
     }
   }
 
   .image {
-    border-radius: 48px;
-    overflow: hidden;
-    max-width: 50%;
-    max-height: 300px;
+    flex: 2; /* Ensure the image takes 2/3 of the width */
+    max-width: 66.667%;
+    display: flex;
+    justify-content: center;
 
     img {
       width: 100%;
       height: auto;
       display: block;
+      border-radius: 48px;
+      max-height: 480px;
     }
   }
 }
